--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md Noyon Rahman | Junior Web Developer</title>
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/shapes/favicon.png" type="image/x-icon">
     <!-- style css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -19,7 +19,7 @@
             <p>Scroll down to explore more about me</p>
         </div>
         <div class="home-image">
-            <img src="./images/profile.png" alt="">
+            <img src="./images/person/profile.png" alt="Profile Pic">
         </div>
     </section>
     <!-- Mission Section -->
@@ -76,7 +76,7 @@
         <h1 class="section-title">Special <span class="highlight-color">Skills</span></h1>
         <div class="parent-skill">
             <div class="skill-image">
-                <img src="./images/skill.png" alt="MY Pic2">
+                <img src="./images/person/skill.png" alt="My Skill Picture">
             </div>
             <div class="skills">
                 <p>I am Worked as a Front-End Developer with around 1 year of experience. Extensively worked developing Responsive Web Applications. Experience in developing web pages effectively using HTML5, CSS3 and JavaScript.</p>
